<resources>
    <string name="app_name">Hitam</string>
    <string name="activity_section_title">Commitments</string>
    <string name="activity_items_title">Expense</string>
    <string name="activity_additem_title">Add Expense</string>
    <string name="activity_edititem_title">Edit Expense</string>
    <string name="activity_income_title">Income</string>
    <string name="activity_preferences_title">Preferences</string>
    <string name="button_home_add">Add</string>
    <string name="button_home_subtract">Take</string>
    <string name="button_home_section">Commitments</string>
    <string name="button_home_income">Income</string>
    <string name="button_home_end">Save</string>
    <string name="no_data_result">No Data</string>
    <string name="label_income_amount">Amount</string>
    <string name="label_income_tax">Tax</string>
    <string name="label_income_deductions">Deductions</string>
    <string name="label_income_freq">Frequency</string>
    <string name="label_income_date">Start Date</string>
    <string name="set_frequency_dialog_title">Select Frequency</string>
    <string name="set_priority_dialog_title">Select Priority</string>
    <string name="add_section_dialog_title">New Commitment</string>
    <string name="add_section_dialog_input">Name..</string>
    <string name="add_section_dialog_affirm">Add</string>
    <string name="add_section_dialog_negate">Cancel</string>
    <string name="edit_section_dialog_title">This Commitment</string>
    <string name="edit_section_dialog_input">Name..</string>
    <string name="edit_section_dialog_affirm">Save</string>
    <string name="edit_section_dialog_negate">Delete</string>
    <string name="spend_dialog_title">Adjust Spending</string>
    <string name="spend_amount_hint">0.00</string>
    <string name="spend_adding_amount">Add Amount?</string>
    <string name="spend_positive">Adjust</string>
    <string name="spend_negative">Cancel</string>
    <string name="add_item_name">Name</string>
    <string name="add_item_amount">Amount</string>
    <string name="add_item_frequency">Frequency</string>
    <string name="add_item_priority">Priority</string>
    <string name="add_item_validation">Complete all fields</string>
    <string name="add_item_success_message">Expense Added</string>
    <string name="edit_item_success_message">Expense Updated</string>
    <string name="edit_item_delete_message">Expense Deleted</string>
    <string name="section_background_success">Sections have been updated</string>
    <string name="generic_error">An Error Occurred. Log with developer</string>
    <string-array name="frequency_array">
        <item>Daily:1</item>
        <item>Weekly:7</item>
        <item>Fortnightly:14</item>
        <item>Monthly:28</item>
        <item>Quarterly:84</item>
        <item>Yearly:365</item>
    </string-array>
    <string-array name="priority_array">
        <item>High:3</item>
        <item>Medium:2</item>
        <item>Low:1</item>
    </string-array>
    <string name="button_income_finish">End</string>
    <string name="preferences_sign_in">Sign In</string>
    <string name="preferences_sign_out">Sign Out</string>
    <string name="preferences_create_new">Create New Account</string>
    <string name="preferences_auth_username">Email</string>
    <string name="preferences_auth_password">Password</string>
    <string name="preferences_night_mode">Night Mode</string>
    <string name="preferences_currency">Select Currency</string>
    <string-array name="preferences_currencies">
        <item>AUD</item>
        <item>USD</item>
        <item>GBP</item>
    </string-array>
    <string name="auth_title">Authentication</string>
    <string name="auth_login_dialog_title">Sign In</string>
    <string name="auth_create_dialog_title">Create Account</string>
    <string name="auth_email">Email</string>
    <string name="auth_password">Password</string>
    <string name="auth_login_success">Signed In</string>
    <string name="auth_logout_success">Signed out</string>
    <string name="auth_create_success">Account created, please sign in</string>
    <string name="auth_error">Error, check network connection</string>
    <string name="firebase_write_success">Saved balance for today</string>
    <string name="firebase_no_user">Save requires login</string>
    <string name="firebase_too_early">Frequency from start date, not passed</string>
</resources>
