<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.thean.hitam.Income">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/label_income_amount"
        android:textAlignment="center"
        android:textSize="18sp"
        android:labelFor="@+id/amountNumber"
        app:layout_constraintBaseline_toBaselineOf="@+id/amountNumber"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/amountNumber"
        app:layout_constraintHorizontal_bias="0.5" />

    <EditText
        android:id="@+id/amountNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/startDate"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/label_income_tax"
        android:textSize="18sp"
        android:labelFor="@+id/taxNumber"
        app:layout_constraintBaseline_toBaselineOf="@+id/taxNumber"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/taxNumber"
        app:layout_constraintHorizontal_bias="0.5" />

    <EditText
        android:id="@+id/taxNumber"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/amountNumber"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/label_income_deductions"
        android:textAlignment="center"
        android:textSize="18sp"
        android:labelFor="@+id/deductionNumber"
        app:layout_constraintBaseline_toBaselineOf="@+id/deductionNumber"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/deductionNumber"
        app:layout_constraintHorizontal_bias="0.5" />

    <EditText
        android:id="@+id/deductionNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/taxNumber"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/label_income_freq"
        android:textAlignment="center"
        android:textSize="18sp"
        android:labelFor="@+id/incomeFrequency"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/incomeFrequency"
        app:layout_constraintBaseline_toBaselineOf="@+id/incomeFrequency"
        app:layout_constraintHorizontal_bias="0.54" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_income_date"
        android:textAlignment="center"
        android:textSize="18sp"
        android:labelFor="@+id/startDate"
        app:layout_constraintBaseline_toBaselineOf="@+id/startDate"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/startDate"
        android:layout_marginEnd="16dp"
        app:layout_constraintHorizontal_bias="0.503" />

    <EditText
        android:id="@+id/startDate"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="date"
        android:onClick="selectStartDate"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/incomeFrequency"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="textPersonName"
        android:onClick="selectFrequency"
        app:layout_constraintTop_toBottomOf="@+id/deductionNumber"
        app:layout_constraintRight_toRightOf="parent" />

</android.support.constraint.ConstraintLayout>
